training is done

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -1702,6 +1702,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(list(models))):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 114,
    "metadata": {},
    "outputs": [
